--- a/UberEats/Pushkin_traktir.html
+++ b/UberEats/Pushkin_traktir.html
@@ -637,7 +637,7 @@
       </a>
     </div>
     <!-- Slider js -->
-    <script src="/Сайты/UberEats/JS/slider_js.js"></script>
+    <script src="JS/slider_js.js"></script>
     <!--  -->
   </body>
 </html>
