--- a/UberEats/Pushkin_traktir.html
+++ b/UberEats/Pushkin_traktir.html
@@ -15,7 +15,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"/>
-
+    <link rel="shortcut icon" type="image/x-icon" href="https://d3i4yxtzktqr9n.cloudfront.net/uber-sites/99c4bc580c8b57b7.ico">
   </head>
 
   <body>
